hphp/test/slow/shapes/idx_arr_type_error.php.expectf
Catchable fatal error: Argument 1 passed to HH\Shapes::idx() must be an instance of HH\darray, null given in %s/test/slow/shapes/idx_arr_type_error.php on line 5
